# ProAGI

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.clinerules/: 01-general-standards.md  02-testing-standards.md  03-code-structure.md  04-error-handling.md  05-security-standards.md  06-documentation-standards.md  github-issue-tracking.md  poc-development-strategy.md  yolo-poc-development-guidelines.md
.clinerules/007_development-workflows/: 007-00_yolo-poc-development.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: main.py
backend/src/core/application_registry/: application_registry.py
backend/src/core/event_bus/: event_bus.py
backend/src/core/framework_api/: core_framework_api.py
backend/src/core/logging_service/: logging_service.py
backend/src/core/mcp_hub/: mcp_hub.py
backend/src/core/metric_collector/: metric_collector.py
backend/src/core/optimization_oracle/: optimization_oracle.py
backend/src/core/request_router/: request_router.py
backend/src/core/sandbox_api/: sandbox_api.py
backend/src/core/sandbox_manager/: sandbox_manager.py
backend/src/core/state_manager/: state_manager.py
backend/src/core/tool_manager/: tool_manager.py
backend/src/db/: database.py  models.py
backend/src/frontend/: index.html
backend/src/frontend/static/: script.js  styles.css
core/application_registry/: application_registry_interface.py
core/event_bus/: event_bus_interface.py
core/framework_api/: core_framework_api_interface.py
core/interfaces/: application_registry_interface.py  state_manager_interface.py
core/logging_service/: logging_service_interface.py
core/mcp_hub/: mcp_hub_interface.py
core/metric_collector/: metric_collector_interface.py
core/optimization_oracle/: optimization_oracle_interface.py
core/proto/: application_registry.proto  application_registry_pb2.py  state_manager.proto  (+9 more)
docs/: Nexus_CoCreate_AI_Specification_v1.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  web-research.md
project_docs_intake/: ClineAGI_Core_prompts.txt  ClineAGI_extra_prompts.txt  ClineAGI_memory-bank.txt  Nexus_CoCreate_AI-Comprehensive_MVP_POC_Design_Specification.md
sandbox/: Dockerfile  pyproject.toml
sandbox/src/: main.py
schemas/: sandbox_execute_request.schema.json  sandbox_execute_response.schema.json
src/: main.py
(+169 files in other folders)
