[tool.poetry]
name = "nexus-cocreate-ai-backend"
version = "0.1.0"
description = "Backend for Nexus CoCreate AI Proof of Concept"
authors = ["Cline AI"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
bcrypt = "^4.1.3"
sqlalchemy = "^2.0.30"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.28.0"
pytest-mock = "^3.12.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
